# prdx-sim

./: .gitignore  README.md  paradox_model.ipynb  pyproject.toml  requirements.txt  ru.md
src/prdx_sim/: __init__.py  agent.py  params.py  plots.py  profiles.py  simulation.py  system.py  user.py  wallets.py
