[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prdx-sim"
version = "0.1.0"
description = "Agent-based simulation of the PARADOX (PRDX/TON) protocol; see prdx-docs for the specification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.62.0",
    "scikit-learn>=1.0.0",
    "jupyter>=1.0.0",
]

[project.urls]
Documentation = "https://github.com/prdx-admin/prdx-docs/blob/main/en/docs.md"
"Documentation (Russian)" = "https://github.com/prdx-admin/prdx-docs/blob/main/ru/docs.md"
"Protocol docs repository" = "https://github.com/prdx-admin/prdx-docs"

[project.optional-dependencies]
dev = ["ruff>=0.1.0", "pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
